[tool.black]
line-length = 88
target-version = [ "py36", "py37", "py38",]
exclude = "((.eggs | .git | .mypy_cache | .pytest_cache | build | dist))"

[tool.poetry]
name = "financial-demo"
version = "0.1.0"
description = ""
authors = ["randy reed <reedrw@appstate.edu>"]

[tool.poetry.dependencies]
python = "3.7"
python-dateutil = "2.8.1"
numpy = "~=1.18.3"
pytz = "~=2019.3"
"ruamel.yaml" = "0.16.5"
SQLAlchemy = "~=1.3.22"
rasa = {extras = ["spacy"], version = "^2.5.0"}
pytablewriter = "^0.58.0"
black = "~=20.8b1"
flake8 = "~=3.8.4"
pytype = "2019.7.11"
pre-commit = "^2.12.1"
pytest-cov = "~=2.10.1"
coveralls = "~=3.0.1"
pytest = "~=5.4.3"
pytest-sanic = "~=1.6.2"
pytest-asyncio = "~=0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
